# x/magedist/handler.go
@@ -1,12 +1,12 @@
-package magedist
+package Magedist
 
 import (
 	sdk "github.com/cosmos/cosmos-sdk/types"
 	sdkerrors "github.com/cosmos/cosmos-sdk/types/errors"
 	govtypes "github.com/cosmos/cosmos-sdk/x/gov/types"
 
-	"github.com/furya-official/mage/x/magedist/keeper"
-	"github.com/furya-official/mage/x/magedist/types"
+	"github.com/furya-official/mage/x/Magedist/keeper"
+	"github.com/furya-official/mage/x/Magedist/types"
 )
 
 // NewCommunityPoolMultiSpendProposalHandler
@@ -16,7 +16,7 @@ func NewCommunityPoolMultiSpendProposalHandler(k keeper.Keeper) govtypes.Handler
 		case *types.CommunityPoolMultiSpendProposal:
 			return keeper.HandleCommunityPoolMultiSpendProposal(ctx, k, c)
 		default:
-			return sdkerrors.Wrapf(sdkerrors.ErrUnknownRequest, "unrecognized magedist proposal content type: %T", c)
+			return sdkerrors.Wrapf(sdkerrors.ErrUnknownRequest, "unrecognized Magedist proposal content type: %T", c)
 		}
 	}
 }
