# x/magedist/types/genesis.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-gogo. DO NOT EDIT.
-// source: furya-official/magemagedist/v1beta1/genesis.proto
+// source: furya-official/mageMagedist/v1beta1/genesis.proto
 
 package types
 
@@ -27,7 +27,7 @@ var _ = time.Kitchen
 // proto package needs to be updated.
 const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 
-// GenesisState defines the magedist module's genesis state.
+// GenesisState defines the Magedist module's genesis state.
 type GenesisState struct {
 	Params            Params    `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
 	PreviousBlockTime time.Time `protobuf:"bytes,2,opt,name=previous_block_time,json=previousBlockTime,proto3,stdtime" json:"previous_block_time"`
@@ -81,11 +81,11 @@ func (m *GenesisState) GetPreviousBlockTime() time.Time {
 }
 
 func init() {
-	proto.RegisterType((*GenesisState)(nil), "mage.magedist.v1beta1.GenesisState")
+	proto.RegisterType((*GenesisState)(nil), "mage.Magedist.v1beta1.GenesisState")
 }
 
 func init() {
-	proto.RegisterFile("furya-official/magemagedist/v1beta1/genesis.proto", fileDescriptor_77f4885f7744ff13)
+	proto.RegisterFile("furya-official/mageMagedist/v1beta1/genesis.proto", fileDescriptor_77f4885f7744ff13)
 }
 
 var fileDescriptor_77f4885f7744ff13 = []byte{
